@@ -103,6 +103,8 @@ Views 3.x-7.x-dev
     o #626704 by DamZ: Build views integration for field.module
     o #721990: Remove todo.
     o #681726 by drewish: Allow term edit link field.
+    o Test argument validation plugins.
+
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
